--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Telegram WebApp SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-  <!-- ✅ Monetag Rewarded SDK (OFFICIAL) -->
+  <!-- Monetag Rewarded SDK -->
   <script src='//libtl.com/sdk.js'
           data-zone='10432878'
           data-sdk='show_10432878'></script>
@@ -56,6 +56,7 @@
       background: #22c55e;
       color: #000;
       cursor: pointer;
+      margin-bottom: 12px;
     }
 
     #loading {
@@ -64,7 +65,7 @@
       opacity: 0.8;
     }
 
-    #aiBtn {
+    .bot-buttons {
       display: none;
       margin-top: 10px;
     }
@@ -79,7 +80,13 @@
 
   <button id="startBtn">▶️ Start</button>
   <div id="loading">⏳ Ad loading…</div>
-  <button id="aiBtn">🧠 Open AI Signal Bot</button>
+
+  <!-- ✅ All bot buttons -->
+  <div class="bot-buttons" id="botButtons">
+    <button id="aiBtn">🧠 AI Signal Bot</button>
+    <button id="realBtn">📊 Real Market Bot</button>
+    <button id="otcBtn">⚡ OTC Signal</button>
+  </div>
 </div>
 
 <script>
@@ -88,17 +95,17 @@
 
   const startBtn = document.getElementById("startBtn");
   const loading = document.getElementById("loading");
-  const aiBtn = document.getElementById("aiBtn");
+  const botButtons = document.getElementById("botButtons");
 
   function resetUI() {
     startBtn.style.display = "block";
     loading.style.display = "none";
-    aiBtn.style.display = "none";
+    botButtons.style.display = "none";
   }
 
   resetUI();
 
-  // ✅ Wait until Monetag is READY
+  // ✅ Wait until Monetag is ready
   function waitForMonetag(cb) {
     let tries = 0;
     const timer = setInterval(() => {
@@ -109,14 +116,13 @@
       }
       if (tries > 20) {
         clearInterval(timer);
-        alert("Monetag not ready. Please open from Telegram mobile app.");
         loading.style.display = "none";
-        aiBtn.style.display = "block";
+        botButtons.style.display = "block";
       }
     }, 500);
   }
 
-  // Start click → show ad
+  // Start → Ad
   startBtn.onclick = () => {
     startBtn.style.display = "none";
     loading.style.display = "block";
@@ -124,21 +130,27 @@
     waitForMonetag(() => {
       show_10432878()
         .then(() => {
-          // ✅ Ad completed
           loading.style.display = "none";
-          aiBtn.style.display = "block";
+          botButtons.style.display = "block";
         })
         .catch(() => {
-          // ❌ skipped / failed
           loading.style.display = "none";
-          aiBtn.style.display = "block";
+          botButtons.style.display = "block";
         });
     });
   };
 
-  // Open AI bot inside Telegram (NOT external browser)
-  aiBtn.onclick = () => {
+  // ✅ Buttons open INSIDE Telegram
+  document.getElementById("aiBtn").onclick = () => {
     tg.openLink("https://color-title-33404201.figma.site/");
+  };
+
+  document.getElementById("realBtn").onclick = () => {
+    tg.openLink("https://gpx-real-market-ai.netlify.app/");
+  };
+
+  document.getElementById("otcBtn").onclick = () => {
+    tg.openLink("https://gpx-trader.netlify.app/");
   };
 </script>
 
