--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <div class="box">
   <h1>🤖 AI Signal Bot</h1>
-  <p>Start চাপলে ১৫ সেকেন্ডের ad দেখানো হবে</p>
+  <p>ai bot Premium Signal</p>
 
   <button id="startBtn">▶️ Start</button>
   <div id="loading">⏳ Ad loading…</div>
