--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <div class="box">
   <h1>🤖 AI Signal Bot</h1>
-  <p>ai bot Premium Signal</p>
+  <p>AI Bot Premium Signal</p>
 
   <button id="startBtn">▶️ Start</button>
   <div id="loading">⏳ Ad loading…</div>
@@ -86,6 +86,7 @@
     <button id="aiBtn">🧠 AI Signal Bot</button>
     <button id="realBtn">📊 Real Market Bot</button>
     <button id="otcBtn">⚡ OTC Signal</button>
+    <button id="autoBtn">🤖 Auto Trade Bot</button>
   </div>
 </div>
 
@@ -151,6 +152,10 @@
 
   document.getElementById("otcBtn").onclick = () => {
     tg.openLink("https://gpx-trader.netlify.app/");
+  };
+
+  document.getElementById("autoBtn").onclick = () => {
+    tg.openLink("https://gpx-ai-bot.netlify.app/");
   };
 </script>
 
