--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
   <!-- ✅ All bot buttons -->
   <div class="bot-buttons" id="botButtons">
     <button id="aiBtn">🧠 AI Signal Bot</button>
-    <button id="realBtn">📊 Real Market Bot</button>
-    <button id="otcBtn">⚡ OTC Signal</button>
     <button id="autoBtn">🤖 Auto Trade Bot</button>
+    <button id="finorixProBtn">🔥 FINORIX PRO AI</button>
   </div>
 </div>
 
@@ -146,16 +145,12 @@
     tg.openLink("https://color-title-33404201.figma.site/");
   };
 
-  document.getElementById("realBtn").onclick = () => {
-    tg.openLink("https://gpx-real-market-ai.netlify.app/");
-  };
-
-  document.getElementById("otcBtn").onclick = () => {
-    tg.openLink("https://gpx-trader.netlify.app/");
-  };
-
   document.getElementById("autoBtn").onclick = () => {
     tg.openLink("https://gpx-ai-bot.netlify.app/");
+  };
+
+  document.getElementById("finorixProBtn").onclick = () => {
+    tg.openLink("https://t.me/FINORIXBOT");
   };
 </script>
 
